Update on the KOH requirements

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Arke
+Theme Name: Arke_KOH_CLOUD
 Theme URI: https://olympusthemes.com/themes/arke/
 Author: DannyCooper
 Author URI: https://olympusthemes.com/
