--- a/style.css
+++ b/style.css
@@ -714,8 +714,11 @@ body {
 }
 
 .entry-title {
-	font-size: 30px;
+	font-size: 26px;
 	margin: 0;
+}
+.entry-content {
+	font-size: 16px;
 }
 
 .entry-title a {
