update font size

--- a/style.css
+++ b/style.css
@@ -717,9 +717,9 @@ body {
 	font-size: 26px;
 	margin: 0;
 }
-.entry-content {
+/*.entry-content {
 	font-size: 16px;
-}
+}*/
 
 .entry-title a {
 	text-decoration: none;
