--- a/style.css
+++ b/style.css
@@ -637,7 +637,7 @@ body {
 }
 
 .site-content {
-	margin-bottom: 25px
+	padding: 20px 0 25px 0;
 }
 
 /*--------------------------------------------------------------
@@ -645,7 +645,8 @@ body {
 --------------------------------------------------------------*/
 
 .site-header {
-	padding: 25px 0 50px 0;
+	padding: 25px 0 10px 0;
+	border-bottom: 1px solid;
 }
 
 .site-title {
