--- a/style.css
+++ b/style.css
@@ -729,12 +729,12 @@ body {
 	display: block;
 	text-decoration: none;
 	color: #525252;
-	padding: 20px 0 20px 30px;
+	padding: 0px 0 20px 30px;
 }
 
 .menu-2 a:hover {
 	color: #3767b3;
-
+}
 
 /*--------------------------------------------------------------
 # Content
@@ -883,8 +883,8 @@ body {
 
 .site-footer {
 	border-top: 1px solid #000;
-	padding: 25px 0;
-	font-size: 14px;
+	padding: 15px 0;
+	font-size: 12px;
 }
 
 /*--------------------------------------------------------------
