--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 /*
 Theme Name: Arke_KOH_CLOUD
 Theme URI: https://olympusthemes.com/themes/arke/
-Author: DannyCooper
-Author URI: https://olympusthemes.com/
+Author: KOH Fuchs
+Author URI: https://koh.cloud/
 Description: Arke is a truly minimal WordPress theme. No sidebars, no widgets, no settings. Just your content. Arke is extremely fast and scores 100/100 on Pingdom's speed test.
-Version: 1.0.1
+Version: 1.1.0
 License: GNU General Public License v2 or later
 Text Domain: arke
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Tags: one-column, custom-menu, editor-style, featured-images, full-width-template, threaded-comments, translation-ready, blog
-GitHub Theme URI: https://github.com/DannyCooper/arke
+GitHub Theme URI: https://github.com/kohfuchs/arke_koh_cloud
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
